# Unified-M

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  greptile.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  stale.yml  training-pipeline.yml  ui-quality.yml
docs/: ARCHITECTURE.md  DATA_SCHEMAS.md  ENV_VARS.md  EXPERIMENTATION.md  IMPLEMENTATION.md  PLOTTING.md  RUST_ACCELERATION.md
notebooks/: 01_data_sources_and_preprocessing.ipynb  02_adstock_saturation_math.ipynb  03_evaluation_methods.ipynb  experimental_analysis.ipynb  initial.ipynb
rust/: Cargo.toml  Makefile  README.md  pyproject.toml
rust/src/: adstock.rs  cache.rs  lib.rs  optimization.rs  saturation.rs
scripts/: README.md  check_docs_sync.py  export_openapi.py
src/: __init__.py  cli.py  config.py
src/api/: __init__.py  app.py
src/connectors/: __init__.py  cloud.py  database.py  local.py  registry.py
src/connectors/ad_platforms/: __init__.py  _base.py  amazon_ads.py  google_ads.py  meta_ads.py  tiktok_ads.py
src/core/: __init__.py  artifacts.py  base_model.py  contracts.py  exceptions.py
src/experiments/: __init__.py  geo_lift.py  power_analysis.py  switchback.py
src/ingestion/: __init__.py
src/mmm/: __init__.py  evaluation.py  model.py
src/models/: __init__.py  backtesting.py  builtin.py  calibration_eval.py  evaluation.py  meridian_adapter.py  numpyro_adapter.py  priors.py  pymc_adapter.py  registry.py
src/optimization/: __init__.py  allocator.py  ortools_allocator.py  scenarios.py
src/orchestration/: __init__.py  dagster_adapter.py  prefect_adapter.py
src/pipeline/: __init__.py  modes.py  runner.py
src/quality/: __init__.py  gates.py  pii_scanner.py
src/reconciliation/: __init__.py  engine.py  fusion.py
src/schemas/: __init__.py  base.py
src/server/: __init__.py  app.py  auth.py  cache.py  jobs.py  schemas.py
src/transforms/: __init__.py  features.py  rust_accel.py
src/unified_m/: cli.py  config.py
src/unified_m/api/: __init__.py  app.py
src/unified_m/ingestion/: __init__.py  loaders.py
src/unified_m/mmm/: __init__.py  decomposition.py
src/unified_m/optimization/: __init__.py  scenarios.py
src/unified_m/reconciliation/: __init__.py  calibration.py
src/unified_m/schemas/: __init__.py
src/unified_m/transforms/: __init__.py  adstock.py  features.py  saturation.py
tests/: __init__.py  test_api_contracts.py  test_base_model_metrics.py  test_cache_backend.py  test_connectors_database.py  test_optimization.py  test_transforms.py
ui/: app.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
ui/scripts/: check-budgets.mjs
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: Badge.tsx  ChartCard.tsx  EmptyState.tsx  Layout.tsx  MetricCard.tsx  PageErrorBoundary.tsx  PageHeader.tsx  PipelineRunner.tsx  Skeleton.tsx  Sparkline.tsx  Table.tsx  Toast.tsx  Tooltip.tsx  VirtualizedList.tsx
ui/src/lib/: analyticsMode.tsx  api.generated.ts  api.ts  chartFormat.ts  colors.ts  downsample.ts  format.ts  queries.ts  queryClient.ts  queryKeys.ts  telemetry.ts  toast.tsx
ui/src/pages/: Calibration.tsx  ChannelInsights.tsx  Contributions.tsx  Dashboard.tsx  Data.tsx  DataQuality.tsx  Datapoint.tsx  Diagnostics.tsx  Optimization.tsx  ROASAnalysis.tsx  Report.tsx  ResponseCurves.tsx  Runs.tsx  ScenarioPlanner.tsx  Settings.tsx  SpendPacing.tsx  Stability.tsx
